update version lib

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-tensorflow==2.6.0
+tensorflow>=2.7.0,<=2.8.0
+tensorflow-io==0.22.0
 kapre==0.3.6
 numpy==1.19.5
 pandas==1.3.4
-tensorflow-io==0.22.0
+tqdm==4.62.3
